# jira-at-home

./: Cargo.toml  README.md  check.py
assets/codex-skills/jira-at-home/: SKILL.md
crates/jira-at-home/: Cargo.toml
crates/jira-at-home/src/: main.rs  store.rs
crates/jira-at-home/src/mcp/: catalog.rs  fault.rs  mod.rs  output.rs  protocol.rs  service.rs  telemetry.rs
crates/jira-at-home/src/mcp/host/: binary.rs  mod.rs  process.rs  runtime.rs
crates/jira-at-home/tests/: mcp_hardening.rs
